@@ -1,0 +1,8 @@
+set error non-classified off
+set error unknown_code off
+set error memory off
+set error stack off
+set hw simif outputs 0xff
+run
+state
+quit
